--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:gray;
+  --bs-body-bg: #bed6d9;
+  --bs-nav-link-color: rgb(250,250,250);
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
